# openaca

./: .asve-seed-state-npm.json  .gitignore  .gitleaks.toml  .openaca-seed-state-npm.json  .openaca-seed-state-pypi.json  CLAUDE.md  CONTRIBUTING.md  LICENSE-DATA  PYPI-README.md  README.md  SECURITY.md  action.yml  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: beta-feedback.md  config.yml
.github/workflows/: autofix.yml  ci.yml  claude.yml  notify-openaca-site.yml  publish-pypi.yml  publish.yml  self-scan.yml
advisories/2026/: ASVE-2026-0001.yaml  ASVE-2026-0002.yaml  ASVE-2026-0003.yaml  ASVE-2026-0004.yaml  ASVE-2026-0005.yaml  ASVE-2026-0006.yaml
candidates/ready_for_review/: MAL-2026-1990.yaml  MAL-2026-2004.yaml  MAL-2026-2005.yaml  MAL-2026-2006.yaml  MAL-2026-227.yaml  MAL-2026-229.yaml  MAL-2026-2315.yaml  MAL-2026-2328.yaml  MAL-2026-248.yaml  MAL-2026-2669.yaml  MAL-2026-2974.yaml  MAL-2026-3280.yaml  MAL-2026-3448.yaml  MAL-2026-3588.yaml  MAL-2026-3589.yaml  MAL-2026-3811.yaml  MAL-2026-405.yaml  MAL-2026-603.yaml  MAL-2026-844.yaml  MAL-2026-862.yaml  MAL-2026-904.yaml
deploy/fleet/: intune-macos.sh  jamf.sh  kandji.sh
deploy/remote/: intune-macos.sh  jamf.sh  kandji.sh
docs/: README.md  beta-tester-guide.md  deploy.md  disclosure-policy.md  fleet-deployment.md  getting-started.md  openaca-bom-schema.md  pypi-publishing.md  remote-deployment.md  sarif-conventions.md  seed-review-rules.md
docs/adrs/: 0001-licenses.md  0002-schema-extension-key.md  0003-single-namespace-architecture.md  0004-advisory-id-year.md  0005-manifest-parsers-posix-only.md  0006-asve-scan-subcommands-and-attribution.md  0006-openaca-scan-subcommands-and-attribution.md  0007-component-inventory-and-host-adapters.md  0008-lockfile-dispatch-and-osv-federation.md  0009-overlay-only-v0.md  0010-overlay-taxonomies-and-seeding.md  0011-llm-assisted-seed-annotation.md  0012-minimal-overlay-schema.md  0024-opt-in-fleet-cli.md  (+32 more)
openaca/: __init__.py
overlays/: CVE-2026-20205.yaml  GHSA-3ch2-jxxc-v4xf.yaml  GHSA-3q26-f695-pp76.yaml  GHSA-6xpm-ggf7-wc3p.yaml  GHSA-m4qw-j7mx-qv6h.yaml  GHSA-rwc2-f344-q6w6.yaml  MAL-2024-8094.yaml  MAL-2024-9212.yaml  MAL-2024-9263.yaml  MAL-2025-15093.yaml  MAL-2025-190848.yaml  MAL-2025-190867.yaml  MAL-2025-190868.yaml  MAL-2025-190869.yaml  MAL-2025-190902.yaml  MAL-2025-190908.yaml  MAL-2025-190909.yaml  MAL-2025-190918.yaml  MAL-2025-190922.yaml  MAL-2025-190923.yaml  MAL-2025-190943.yaml  MAL-2025-191051.yaml  MAL-2025-191052.yaml  MAL-2025-191053.yaml  MAL-2025-191107.yaml  MAL-2025-191195.yaml  MAL-2025-191196.yaml  MAL-2025-191332.yaml  MAL-2025-191465.yaml  MAL-2025-191527.yaml  MAL-2025-191647.yaml  MAL-2025-191648.yaml  MAL-2025-191788.yaml  MAL-2025-191789.yaml  MAL-2025-191924.yaml  MAL-2025-191925.yaml  MAL-2025-191926.yaml  MAL-2025-191927.yaml  MAL-2025-191929.yaml  MAL-2025-191930.yaml  (+67 more)
schema/: asve.schema.json  openaca-bom.schema.json  openaca.schema.json
scripts/: git-checkout.sh  git-merge.sh  git-rebase.sh  git-stash.sh  install-hooks.sh  install.sh  scan.sh  seed-osv-overlays.sh
tests/: conftest.py  test_bom.py  test_bom_cli.py  test_bom_diff.py  test_bom_lint.py  test_component_ref.py  test_core_facade.py  test_cvss.py  test_e2e.py  test_export.py  test_finding_output.py  test_graph.py  test_graph_build.py  test_identity.py  test_identity_lifecycle.py  test_import_from_osv.py  test_lint.py  test_matcher.py  test_mcp_launch_resolve.py  test_observation_sarif_adapter.py  test_observations.py  test_osv_federation.py  test_overlays.py  test_posture_api_endpoint_override.py  test_posture_finding.py  test_posture_immutability.py  test_posture_insecure_transport.py  test_posture_integration.py  test_posture_mcp_auto_approve.py  test_posture_missing_auth.py  test_posture_mutable_install.py  test_posture_skill_capability.py  test_promote.py  test_render.py  test_reserve_id.py  test_resync_from_aliases.py  test_sarif.py  test_scan.py  test_schema.py  test_seed_cli.py  (+5 more)
tests/fixtures/repos/sample-pyproject/: pyproject.toml
tools/: __init__.py  bom.py  bom_cli.py  bom_diff.py  bom_lint.py  cli.py  component_ref.py  cvss.py  export.py  finding_output.py  graph.py  graph_build.py  identity.py  import_from_osv.py  lint.py  matcher.py  mcp_launch_resolve.py  osv_federation.py  overlays.py  promote.py  render.py  reserve_id.py  resync_from_aliases.py  sarif.py  scan.py  severity.py
(+209 files in other folders)
