[project]
name = "openaca"
version = "0.1.0b1"
description = "OpenACA: agent composition analysis — overlays and scanner for agent stack security."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "click>=8.1",
    "cvss>=3.6",
    "jinja2>=3.1",
    "jsonschema>=4.21",
    "packaging>=24.0",
    "pathspec>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.scripts]
openaca = "tools.cli:main"

[project.urls]
Homepage = "https://openaca.dev"
Repository = "https://github.com/open-agent-security/openaca"
Issues = "https://github.com/open-agent-security/openaca/issues"
Documentation = "https://github.com/open-agent-security/openaca-demo/blob/main/BETA-TESTER-GUIDE.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
force-include = { "overlays" = "overlays", "docs/frameworks" = "docs/frameworks", "schema" = "schema" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
