[project]
name = "openaca"
version = "0.1.0b8"
description = "OpenACA: Agent Composition Analysis — overlays and scanner for AI agent security."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "click>=8.1",
    "cvss>=3.6",
    "httpx>=0.28.1,<1.0.dev0",
    "jinja2>=3.1",
    "jsonschema>=4.21",
    "packaging>=24.0",
    "pathspec>=0.12",
    "pydantic>=2.6,<3",
    "pyyaml>=6.0",
]

[project.scripts]
openaca = "tools.cli:main"

[project.urls]
Homepage = "https://github.com/open-agent-security/openaca"
Documentation = "https://github.com/open-agent-security/openaca-demo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "openaca"]
force-include = { "overlays" = "overlays", "docs/frameworks" = "docs/frameworks", "schema" = "schema" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
