[project]
name = "sample-agent"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "aws-mcp-server==0.3.0",
    "anthropic>=0.40.0",
    "weather-mcp",
    "langchain[community]>=0.3.0,<0.4.0; python_version >= '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff==0.4.5",
]

[dependency-groups]
agents = [
    "@cyanheads/git-mcp-server",
    "mcp-remote==0.4.0",
]
